PCA_example.ipynb

--- a/PCA_example.ipynb
+++ b/PCA_example.ipynb
@@ -24,7 +24,7 @@
     "# This dictionary contains students' Grades, SAT scores, Extracurriculars, Recommendation, and Interview scores\n",
     "data = {\n",
     "    'Grades': [85, 90, 80],\n",
-    "    'SAT': [1350, 1400, 1300],\n",
+    "    'Entry exam': [80, 85, 75],\n",
     "    'Extracurriculars': [8, 7, 9],\n",
     "    'Recommendation': [9, 8, 10],\n",
     "    'Interview': [7, 8, 6]\n",
